# iff2gif

./: .gitignore  CMakeLists.txt  README.md  chunky.cpp  getopt.c  gifwrite.cpp  iff.h  iff2gif.cpp  iff2gif.h  iff2gif.sln  iff2gif.vcxproj  iff2gif.vcxproj.filters  iffread.cpp  mediancut.cpp  neuquant.cpp  palette.cpp  planar.cpp  ppunpack.cpp  quantizer.cpp  rotate.cpp  types.h
.github/workflows/: cmake-multi-platform.yml
